syntax = "proto3";
package databasepb;
option go_package = "github.com/Anthony-Bible/password-exchange/app/databasepb";
import "google/protobuf/empty.proto";

message SelectRequest{
    string uuid =1;
    
}
message SelectResponse
{
    string uuid = 1;
    string content = 2;
    string passphrase = 3;
   
}
message InsertRequest
{
    string uuid = 1;
    string content = 2;
    string passphrase = 3;
}

service dbService{
    rpc Select(SelectRequest) returns (SelectResponse) {}
    rpc Insert(InsertRequest) returns (google.protobuf.Empty) {}
  }
